--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jQuery.toggleModifier",
   "scripts": {
-    "test": "grunt test -v -f"
+    "test": "grunt qunit -v -f"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-qunit": "0.7.0"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-qunit": "0.7.0",
+    "grunt-contrib-uglify": "^0.9.1"
   }
 }
