--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jQuery.toggleModifier",
   "scripts": {
-    "test": "grunt qunit -v -f"
+    "test": "grunt qunit -v"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
