Add `addModifier` and `removeModifier` plugin wrappers. :rocket:
- addModifier just add a modifier if it hasn't;
- removeModiifer remove a modifier if it exist;
- add a `npm run setup` to setup development environment;

Remove the docblock and write good assert descriptions

Remove the extend methods

Remove the docblock and write good assert descriptions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jQuery.toggleModifier",
   "scripts": {
+    "setup": "npm i && bower install",
     "test": "grunt qunit -v -f"
   },
   "devDependencies": {
