--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "jQuery.toggleModifier",
+  "version": "0.3.1",
+  "main": "dist/jQuery.toggleModifier.js",
   "scripts": {
     "setup": "npm i && bower install",
     "test": "grunt qunit -v -f"
   },
+  "keywords": ["toggle", "classes", "modifier", "bem"],
+  "author": "viniciusalmeida",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/viniciusalmeida/jQuery.toggleModifier.git"
+  },
+  "bugs": {
+    "url": "https://github.com/viniciusalmeida/jQuery.toggleModifier/issues"
+  },
+  "homepage": "https://github.com/viniciusalmeida/jQuery.toggleModifier",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "^0.8.0",
